# network_dash

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  diagnosis.rs  event.rs  health.rs  history.rs  incidents.rs  lib.rs  main.rs  net.rs  tui.rs
src/metrics/: dns.rs  link.rs  mod.rs  ping.rs  proc.rs  pubip.rs  reachability.rs  routing.rs  throughput.rs
src/ui/: mod.rs  panels.rs  theme.rs  widgets.rs
