[package]
name = "network_dash"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.3", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.33"
hickory-resolver = "0.26.1"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "charset", "http2"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
socket2 = "0.6.5"
surge-ping = "0.9.0"
sysinfo = "0.39.6"
tokio = { version = "1.53.0", features = ["full"] }
toml = "1.1.3"

[dev-dependencies]
insta = "1.48.0"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
